Scheduler correctly aligned

--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -12,7 +12,7 @@
 
 .middle-row {
     background-color: red;
-    height: calc(70vh - 30px);
+    height: calc(80vh - 30px);
     display: flex;
 }
 
@@ -28,5 +28,5 @@
 
 .bottom-row {
     background-color: green;
-    height: calc(30vh - 30px);
+    height: calc(20vh - 30px);
 }
